# KiteMCP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
static/js/: analytics.js
templates/: analytics.html  dashboard.html  index.html  orders.html  positions.html
