[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kite-mcp"
version = "0.1.0"
description = "Kite MCP Web App for Zerodha Integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "kiteconnect>=5.0.1",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "websockets==12.0",
    "jinja2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
start = "uvicorn main:app --reload" 